fix bag with login form on ios

--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -28,7 +28,7 @@ div
 	&.main_aut
 		width: 100%
 		height: 100%
-		position: fixed
+		position: absolute
 		overflow: auto
 		top: 0
 		left: 0
